sql-check/tests/compile_fail/postgres/invalid_sql_syntax.stderr
error: SQL validation failed: $ERROR
 --> tests/compile_fail/postgres/invalid_sql_syntax.rs:4:16
  |
4 |     let _sql = check!("SELEC * FROM");
  |                ^^^^^^^^^^^^^^^^^^^^^^
